test to fix hover state on mobile screen
try to fix hover mobile screen by :
1- add active class and put it in js.
2- add :active

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -273,12 +273,10 @@ header .menu span {
   border-radius: 2.5px;
   transition: width 0.4s;
 }
-header .menu:hover span:nth-child(2),
-header .menu.active span:nth-child(2) {
+header .menu:hover span:nth-child(2) {
   width: 60%;
 }
-header .menu:hover span:first-child,
-header .menu.active span:first-child {
+header .menu:hover span:first-child {
   width: 20%;
 }
 @media (max-width: 1199px) {
@@ -560,9 +558,11 @@ header .menu.active span:first-child {
   cursor: pointer;
   padding: 5px;
 }
+#right-arrow:active,
 #right-arrow:hover {
   transform: scale(1.3) translateX(15px);
 }
+#left-arrow:active,
 #left-arrow:hover {
   transform: scale(1.3) translateX(-15px);
 }
